force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/SOLXYZCSO001__ReportMapping__c.object-meta.xml
<CustomObject>
    <description>Manage the mapping of Field</description>
    <label>マッピング</label>
    <nameField>
        <displayFormat>M-{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>マッピングＩＤ</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>