force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__attributetype__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__attributetype__c</fullName>
    <label>属性タイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>