force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__AutoImageNo__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__AutoImageNo__c</fullName>
    <label>自動画像番号</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>