force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__CulomnSort__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__CulomnSort__c</fullName>
    <label>項目ソート</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>