force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__ImageType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ImageType__c</fullName>
    <label>画像種類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>