force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__keyName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__keyName__c</fullName>
    <label>キー名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>