force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__MapHeight__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MapHeight__c</fullName>
    <label>地図高さ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>