force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__MapName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MapName__c</fullName>
    <label>地図名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>