force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__MapScale__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MapScale__c</fullName>
    <label>地図縮尺</label>
    <length>255</length>
    <type>Text</type>
</CustomField>