force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__ModelDefinitionID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ModelDefinitionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>型定義ID</label>
    <referenceTo>SOLXYZCSO001__ReportModelDefinition__c</referenceTo>
    <relationshipLabel>マッピング</relationshipLabel>
    <relationshipName>MPGvm01</relationshipName>
    <type>Lookup</type>
</CustomField>