force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__ObjectCulomn__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ObjectCulomn__c</fullName>
    <label>オブジェクト項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>