force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__ObjectIDref__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ObjectIDref__c</fullName>
    <label>オブジェクトＩＤ（（サブクエリ用リファレンス））</label>
    <length>255</length>
    <type>Text</type>
</CustomField>