force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__OverlayCulomnRef__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayCulomnRef__c</fullName>
    <label>オーバレイ項目REF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>