force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__OverlaySheetIDList__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlaySheetIDList__c</fullName>
    <label>オーバレイシートID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>