force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__OverlaySheetNameList__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlaySheetNameList__c</fullName>
    <label>オーバレイシート名</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>