force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__ReportOutPutHistory__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportOutPutHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>帳票出力履歴</label>
    <referenceTo>SOLXYZCSO001__ReportOutPutHistory__c</referenceTo>
    <relationshipLabel>マッピング</relationshipLabel>
    <relationshipName>kEWw</relationshipName>
    <type>Lookup</type>
</CustomField>