force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__SearchJoinCondition__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SearchJoinCondition__c</fullName>
    <defaultValue>&quot;AND&quot;</defaultValue>
    <label>検索結合条件</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>