force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__SearchOperator__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SearchOperator__c</fullName>
    <description>帳票生成する際の検索条件</description>
    <label>検索条件</label>
    <length>1</length>
    <type>Text</type>
</CustomField>