force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__SearchValue__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SearchValue__c</fullName>
    <description>帳票作成する時の検索値</description>
    <label>検索値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>