force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__SortOrderNum__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SortOrderNum__c</fullName>
    <label>ソート順番号</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>