force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__SortType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SortType__c</fullName>
    <label>ソートタイプ</label>
    <length>10</length>
    <type>Text</type>
</CustomField>