force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__SubrefID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SubrefID__c</fullName>
    <label>オブジェクト項目（サブクエリ用リファレンス）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>