force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__tagInfo__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__tagInfo__c</fullName>
    <label>タグ情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>