force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__tempPicID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__tempPicID__c</fullName>
    <label>添付画像ＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>