force-app/main/default/objects/SOLXYZCSO001__ReportMapping__c/fields/SOLXYZCSO001__userInput__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__userInput__c</fullName>
    <label>ユーザ入力項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>